--- a/core/Configuration.php.example
+++ b/core/Configuration.php.example
@@ -10,6 +10,7 @@
       const IMAGE_FOLDER ="/tmp";
       const CURRENT_RACE = -1;
       const TV_SIZE = 10;
+      const GUEST_USER_ID = -1;
    }
 
 
