Fix image upload constant name.
Add default content, too.

--- a/core/Configuration.php.example
+++ b/core/Configuration.php.example
@@ -7,7 +7,7 @@
       const DB_NAME = "meoRace"; 
       const DB_USER = "meoRace"; 
       const DB_PASSWORD = "meoRace"; 
-      const IMAGE_FOLDER ="/tmp";
+      const IMAGE_UPLOAD_FOLDER ="imageUpload/";
       const CURRENT_RACE = -1;
       const TV_SIZE = 10;
       const GUEST_USER_ID = -1;
